# synthetic-query-gen

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: config.yaml  main.py
src/modules/: __init__.py  prepare_data.py  setup_llm.py  synthetic_generator.py
