[project]
name = "project-template"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "jgkym", email = "jingi.data@gmail.com"}]
requires-python = ">= 3.11, <3.12"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
project-template = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ruff = ">=0.5.6,<0.6"
pre-commit = ">=3.8.0,<4"
