[project]
name = "synthetic-query-gen"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "jgkym", email = "jingi.data@gmail.com"}]
requires-python = ">= 3.11, <3.12"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
synthetic-query-gen = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ruff = ">=0.5.6,<0.6"
pre-commit = ">=3.8.0,<4"
dspy-ai = ">=2.4.13,<3"
omegaconf = ">=2.3.0,<3"
pip = ">=24.2,<25"
